# pywiza

./: .gitignore  README.md  package.json  pnpm-lock.yaml  pyproject.toml
app/: app.py  bun.config.js  package.json
app/src/: main.tsx
app/templates/: index.html
